--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
     --primary: rgb(54, 112, 199);
     --light: #f4f4f4;
     --dark: #333;
-    --warning: rgb(99, 36, 36);
+    --warning: rgb(157, 33, 33);
 }
 
 * {
@@ -20,9 +20,8 @@ body {
     display: grid;
     grid: 
         "header header header header" auto 
-        ". lists active ." auto / 
-        1fr minmax(100px, 300px) minmax(250px, 500px) 1fr;
-    
+        "...... lists active ......." auto / 
+        1fr minmax(75px, 300px) minmax(200px, 550px) 1fr;
 }
 
 .title {
@@ -139,6 +138,14 @@ form {
     font-size: 1rem;
 } 
 
+.no-list-text {
+    width: 100%;
+    height: 100%;
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    text-align: center;
+}
+
 .todo-body {
     padding: var(--spacer);
     position: relative;
@@ -222,22 +229,27 @@ form {
     transform-origin: left;
 }
 
-.delete-stuff {
+.delete-buttons {
     display: flex;
     justify-content: space-evenly;
     position: absolute;
     width: 100%;
     left: 0;
-    bottom: -35px;
-    color: var(--dark);
+    margin-top: 2.5rem;
 }
 
 .btn.delete {
-    opacity: 0.7;
+    opacity: 0.9;
     font-size: 1rem;
     transition: color 200ms;
+    color: var(--warning);
+    background: var(--light);
+    border-radius: 20px;
+    opacity: 0.9;
+    padding: .5rem 1rem;
 }
 
 .btn.delete:hover {
-    color: var(--warning);
+    color: var(--light);
+    background: var(--warning);
 }
